--- a/main.css
+++ b/main.css
@@ -37,14 +37,14 @@ body {
 
 .item-content {
   position: relative;
-  margin-top: 1.5%;
+  margin-top: 3vh;
   margin-left: 4%;
   padding: 10px;
   background-color: rgba(255, 255, 255, 0.7);
   border: 0;
   border-radius: 10px;
   width: 92%;
-  height: 80%;
+  height: 80vh;
 }
 
 .item-info {
@@ -63,10 +63,11 @@ body {
 }
 
 .item-table {
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
   overflow-y: scroll;
   height: 70%;
+  border: 0;
 }
 
 .table-sticky {
@@ -76,6 +77,6 @@ body {
 }
 
 .item-search {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
