--- a/main.css
+++ b/main.css
@@ -53,6 +53,12 @@ body {
   font-size: 1rem;
 }
 
+.file-info {
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 1rem;
+}
+
 .item-info .card {
   margin-right: 5px !important;
   margin-left: 5px;
